# FarkleGame

./: CMakeLists.txt  Farkle.cpp  Game.cpp  Game.h  IT 312- Farkle.rar  Menu.cpp  Menu.h  Player.cpp  Player.h  README.md  Rules.txt  targetver.h
